[package]
name = "stream_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.8.1"
bytes = "1.10.1"
crossfire = "2.1.7"
futures = "0.3.31"
itertools = "0.14.0"
kanal = "0.1.1"
paste = "1.0.15"
reqwest = { version = "0.12.24", features = ["stream"] }
serde_json = "1.0.145"
stream_utils = { path = "../stream_utils", features = ["crossfire", "kanal", "tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
