[package]
name = "stream_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.8.1"
bytes = "1.10.1"
crossfire = "2.1.7"
futures = "0.3.31"
itertools = "0.14.0"
kanal = "0.1.1"
paste = "1.0.15"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io", "io-util"] }
tracing = "0.1.41"
proc_macros = { path = "../proc_macros" }

[features]
default = ["tokio"]
tokio = []
crossfire = []
kanal = []
